# pixelpal-os

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
cmake/: PixelPalBuildInfo.cmake
docs/: architecture.md  deployment.md  pixelpal-engine.md  priory-editor.md
launcher/: CMakeLists.txt
launcher/include/pixelpal/: build_info.hpp.in  game_manifest.hpp  menu_audio.hpp  status_snapshot.hpp
launcher/src/: catalog.cpp  main.cpp  menu_audio.cpp  status_snapshot.cpp
packaging/: pixelpal-layout.md
sample-games/botbite/: CMakeLists.txt  icon.ppm  main.c  manifest.toml  splash.ppm
sample-games/brothers/: CMakeLists.txt  icon.ppm  main.c  manifest.toml
sample-games/glitch-grid/: CMakeLists.txt  icon.ppm  main.c  manifest.toml  splash.ppm
sample-games/grand-prix/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/kilobytes/: CMakeLists.txt  icon.ppm  main.c  manifest.toml  splash.ppm
sample-games/molecules/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/pixelpal-checkers/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/pixelpal-chess/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/pocket-port/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/priory/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  slice-1138.cpp  slice-1356.cpp  slice-1704.cpp  slice-1929.cpp  splash.ppm  stage-windows.cmake
sample-games/priory/editor-projects/: saint-catherine-arrival.json
sample-games/ribbon-raid/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/riverfive/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm  velvet_deck.cpp
sample-games/settlers/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sample-games/slinkbit/: CMakeLists.txt  icon.ppm  main.c  manifest.toml  splash.ppm
sample-games/stonefall/: CMakeLists.txt  icon.ppm  main.c  manifest.toml  splash.ppm
sample-games/vector-bastion/: CMakeLists.txt  icon.ppm  main.cpp  manifest.toml  splash.ppm
sdk/: CMakeLists.txt
sdk/include/pixelpal/: pixelpal.h  rpg_engine.hpp
sdk/src/: pixelpal.c  rpg_engine.cpp
services/: pixelpal-preflight.sh  pixelpal-run.sh  pixelpal-statusd.py
services/systemd/: pixelpal-launcher.service  pixelpal-preflight.service  pixelpal-statusd.service  pixelpal.target
themes/default/: README.md  palette.toml
themes/default/audio/: README.md  manifest.toml
tools/: build-launcher-and-glitchgrid.cmd  build-missing-games.cmd  build-pixelpal-engine-cli-windows.cmd  build-priory-editor-windows.cmd  build-priory-windows.cmd  pixelpal-install.py  pixelpal-refresh-cache.py  run-pixelpal-engine-cli.cmd  run-priory-editor-windows.cmd  run-priory-og-text.cmd  run-priory-windows.cmd  smoke-test-pixelpal-engine.cmd  smoke-test-priory-editor.cmd  smoke-test-priory.cmd  test-cc.cmd
tools/pixelpal-engine-cli/: CMakeLists.txt  main.cpp
tools/priory-editor/: CMakeLists.txt  main.cpp
